# raytracer

./: Cargo.toml
src/: app.rs  camera_controller.rs  gui.rs  renderer.rs
src/scene/: render_ppm.rs  scene_tris.rs
src/scene/bvh/: mod.rs  traversal_test.rs  tree.rs
src/shaders/: shader_tris.wgsl
tests/: rendering_tests.rs
